HEAD - Fix for 74126